# x-e-commerce

./: README.md
backend/: Cargo.toml  innovation_backend.did
backend/src/: .~lock.lib.rs#  lib.rs
public/: index.html
src/components/home/Footer/: Footer.js  FooterBottom.js
src/components/home/Header/: Header.js
src/components/home/NewArrivals/: NewArrivals.js
src/components/home/SpecialOffers/: SpecialOffers.js
src/constants/: index.js
src/pages/About/: About.js
src/pages/Journal/: Journal.js
